--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-graphql": "^0.11.0",
     "graphql": "^15.4.0",
     "jquery": "^3.5.1",
+    "nodemon": "^2.0.7",
     "popper.js": "^1.16.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
