Move code for update into toplevel directory.

--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "peacheyweb",
+  "name": "update2021",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/fiber": "^6.0.10",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-graphql": "^0.11.0",
-    "graphql": "^15.4.0",
-    "jquery": "^3.5.1",
-    "nodemon": "^2.0.7",
-    "popper.js": "^1.16.1",
-    "react": "^16.14.0",
-    "react-bootstrap": "^1.4.3",
-    "react-dom": "^16.14.0",
-    "react-icons": "^4.1.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0",
-    "three": "^0.127.0"
+    "@babel/eslint-parser": "^7.13.14",
+    "@chakra-ui/react": "^1.6.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.8.3",
+    "framer-motion": "^4.1.11",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^3.11.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
