--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-scripts": "4.0.3",
+    "react-timeline-scribble": "^1.0.14",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
