--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "update2021",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.17.x"
+  },
   "private": true,
   "dependencies": {
     "@babel/eslint-parser": "^7.13.14",
